[package]
name = "corona"
version = "0.1.0"
authors = ["Oleg Scherbakov <scherbakov.oleg@gmail.com>"]
edition = "2021"

[dependencies]
byteorder = "1.4"
chrono = "0.4"
dirs = "2.0"
encoding = "0.2"
rusqlite = { version = "0.29", features = ["chrono", "bundled"] }
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
zip = "0.5"

